fixed the extra space on the description

--- a/inv_mockup/ClientApp/app/components/description/description.component.css
+++ b/inv_mockup/ClientApp/app/components/description/description.component.css
@@ -1,3 +1,8 @@
 ﻿img{
     width: 40%;
 }
+
+
+#addCart{
+    margin-top: 40px;
+}
